# thecode-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: test_cli.py  test_core.py
thecode/: cli.py  core.py
