[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "thecode"
version = "1.0.0"
description = "Génération déterministe de mots de passe à partir d'un site et d'une clef."
requires-python = ">=3.9"
authors = [{ name = "Juliette Debono" }]
license = { text = "MIT" }
dependencies = ["pyperclip>=1.8"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
thecode = "thecode.cli:main"

[tool.setuptools]
packages = ["thecode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
